--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ body{
     font-size: 16px; 
     height: 100vh;
     /*Background responsivo*/
-    background-image: url('../images/portfolio/corchoGrande.jpg');
+    background-image: url('../images/portfolio/corchoGrande.webp');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat; 
