--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,14 @@
     font-family: "Pretty Neat";
     src: url('../fonts/prettyNeat.ttf');
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 body{
     font-family: 'Pretty Neat', cursive; 
